# ercot_dart

./: .flake8  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  LICENSE  Makefile  Modeling Discussion.docx  README.md  dart_slt_bimodal_stats_20250605_154100.csv  demo_option2_architecture.py  get_optimized_xgboost_params.py  pyproject.toml  requirements.txt  setup.py  test_backtesting_demo.py  test_format.py  test_synthetic_validation.py  ~$deling Discussion.docx
config/: to_do.yaml
config/data/exp1/: experiment_notes.yaml
config/data/exp2/: experiment_notes.yaml
config/exp0/: experiment_notes.yaml
config/exp2/: experiment_notes.yaml
config/modeling/exp0/: exp0.yaml
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
scripts/: check_imports.py
src/: __init__.py
src/backtesting/: __init__.py
src/backtesting/ercot/: __init__.py  base_strategy.py  strategy_runner.py
src/backtesting/ercot/analytics/: trade_analytics.py
src/backtesting/ercot/dashboard/: __init__.py  financial_dashboard.py  strategy_dashboard.py
src/backtesting/ercot/evaluation/: __init__.py
src/backtesting/ercot/strategies/: __init__.py  naive_strategy.py  sign_prob_strategy.py
src/data/: 00-kag-get-ercot-raw-data.py  __init__.py
src/data/ercot/: __init__.py  api.py  auth.py  database.py  ercot_client.py  ercot_data.py  processors.py
src/data/ercot/clients/: __init__.py  base.py  dam_lambda.py  dam_spp.py  load.py  rt_spp.py  solar.py  wind.py
src/etl/: __init__.py
src/etl/ercot/: __init__.py  ercot_etl.py
src/etl/ercot/clients/: __init__.py  dam_lambda.py  (+5 more)
src/features/: __init__.py
src/features/ercot/: __init__.py  exp_dataset.py  visualization.py
src/features/utils/: __init__.py  utils.py
src/models/: __init__.py
src/models/ercot/: __init__.py  study_dataset.py
src/tests/: __init__.py
src/visualization/: 01-kag-visualize-ercot-raw-data.py  __init__.py
src/visualization/ercot/: __init__.py  base.py  ercot_viz.py
src/workflow/: 00-kag-dst-validation.py  00-kag-get-ercot-raw-data.py  01-kag-visualize-ercot-raw-data.py  02-kag-transform-ercot-data.py  03-kag-exp0-ercot-study-dataset.py  03-kag-exp0-study-dataset.py  03-kag-exp1-ercot-study-dataset.py  03-kag-exp2-ercot-study-dataset.py  04-kag-exp0-ercot-modeling.py  04-kag-exp0-modeling.py  04-kag-exp1-ercot-modeling.py  04-kag-exp2-ercot-modeling.py  05-kag-exp0-ercot-backtest.py  __init__.py
tests/: test_ercot_public_api.py
(+64 files in other folders)
