[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ercot_dart"
version = "0.1.0"
description = "ERCOT DART price prediction system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "holidays>=0.34",
    "scipy>=1.11.0",
    "kaleido>=0.2.1",  # For plotly image export
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "black",
    "flake8-import-order",
    "pytest",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["src"]
force_single_line = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
    "build",
    "dist"
]
# Import order enforcement
import-order-style = "pycharm"
application-import-names = "src" 